--- a/D3_4/NewsPaper/news/templates/news.html
+++ b/D3_4/NewsPaper/news/templates/news.html
@@ -5,6 +5,6 @@
 {{ post.title|censor}}<
 {% endblock title %}
 {% block content %}
-	<div>{{post.timestamp|date:'d.m.Y'}}<h2>{{post.title}}</h2></div>
+	<div>{{post.timestamp|date:'d-m-Y'}} {{ post.timestamp|time:"H:i" }}<h2>{{post.title}}</h2></div>
 	<div>{{post.content|censor}}</div>
 {% endblock content %}
